# sinfonifry

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  install.sh
core/: CMakeLists.txt  ClientThread.cpp  ClientThread.h  client_thread.cpp  client_thread.h  log.properties  plugin_manager.h  sinfonifry_core.cpp
core/plugins/: CMakeLists.txt
core/plugins/disk_status/: core_plugin_disk_status.cpp
core/tinyxml/: tinyxml.cpp  tinyxml.h
db/: create_db.sql  create_db.sql~
doc/: doc.txt
inc/: commons.h
infra/: install.sh
linux/: part_list.cpp
linux-client/: CMakeLists.txt  main.cpp  part_list.cpp
linux-client/plugins/: CMakeLists.txt
linux-client/plugins/diskstat/: CMakeLists.txt  disk_status.cpp  utils.cpp
plugin-api/: CMakeLists.txt  Doxyfile  commons.h  plugin-client.h  plugin.h  sinfonifry_errors.h  sinfonifry_plugin_base.h  sinfonifry_plugin_core.h
plugins/: CMakeLists.txt
plugins/api/: CMakeLists.txt  sinfonifry_plugin_base.h  sinfonifry_plugin_client.h  sinfonifry_plugin_core.h  sinfonifry_plugin_vis.h  sinfonifry_signed_plugin.h  sinfonifry_signed_plugin_client_method_execute.h  sinfonifry_signed_plugin_client_method_release.h  sinfonifry_signed_plugin_method_load.h  sinfonifry_signed_plugin_method_unload.h
plugins/disk_status/: CMakeLists.txt
plugins/disk_status/client/: CMakeLists.txt  disk_status.cpp  utils.h
plugins/disk_status/core/: CMakeLists.txt  core_plugin_disk_status.cpp  disk_status.sql
plugins/disk_status/web/: CMakeLists.txt  web_plugin_disk_status.cpp
posix-client/: CMakeLists.txt  log.properties  main.cpp
scripts/: add_plugin_to_config.cmake  inject_plugin_sql_script.cmake
sinfonifry/: Makefile  add_host.ecpp  css.ecpp  get_data.ecpp  get_host_status.ecpp  host_list.ecpp  images.ecpp  jscript.ecpp  sinfonifry.ecpp  style.css  tntnet.conf  tntnet.properties
templates/: instdir.h.template
utils/: CMakeLists.txt  commons.h  components.cpp  components.h  configuration.cpp  configuration.h  db_utils.cpp  db_utils.h  plugin_helper.cpp  plugin_helper.h  utils.cpp  utils.h
web/: CMakeLists.txt  Makefile  add_host.ecpp  css.ecpp  dashboard.ecpp  get_data.ecpp  get_host_status.ecpp  host_info.ecpp  host_list.ecpp  images.ecpp  jscript.ecpp  log.properties  main.cpp  menu.ecpp  scripts.js  sinfonifry.ecpp  style.css  tntnet.conf  utils_web.cpp  utils_web.h
