OPTION(CORE_PLUGIN_DISK_STATUS "Build the Disk Status plugin for Core" ON)

SET(CORE_CONFIG_BIND_IP "0.0.0.0" CACHE STRING "0.0.0.0")
SET(CORE_CONFIG_BIND_PORT "29888" CACHE STRING "29888")

SET(CORE_CONFIG_DB_HOST_IP "127.0.0.1" CACHE STRING "127.0.0.1")
SET(CORE_CONFIG_DB_USER "sinfonifry" CACHE STRING "sinfonifry")
SET(CORE_CONFIG_DB_PASS "s1nf0n1fry" CACHE STRING "s1nf0n1fry")
SET(CORE_CONFIG_DB "sinfonifry" CACHE STRING "sinfonifry")

